# i2p-easy-manager

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
docs/: development.md  installation.md  usage.md
i2p_manager/: __init__.py  __main__.py  cli.py  config.py  dashboard.py  firefox.py  i2pd.py  utils.py
i2p_manager/commands/: __init__.py  cmd_browser.py  cmd_config.py  cmd_init.py  cmd_logs.py  cmd_reset.py  cmd_restart.py  cmd_start.py  cmd_status.py  cmd_stop.py
tests/: test_cli.py  test_conf.py  test_config.py  test_firefox.py  test_i2pd.py  test_utils.py
