[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "i2p-easy-manager"
version = "0.1.0"
description = "Lightweight I2P network access manager"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "eliasz130", email = "eliaspublic@icloud.com"}]
keywords = ["i2p", "privacy", "anonymity", "firefox"]

dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
i2p-manager = "i2p_manager.cli:main"

[tool.setuptools.packages.find]
include = ["i2p_manager*"]

[tool.setuptools.package-data]
i2p_manager = ["data/*.js"]
